# brief21-docker

./: .env  Cargo.toml  Dockerfile  README.md  compose.yml
.bruno/: collection.bru
.bruno/users/: createUser.bru  getUserById.bru  getUsers.bru
.devcontainer/: devcontainer.json
db/migrations/: 202503112036_init_db.sql
lib/: lib.rs
lib/application/dto/: mod.rs  user_create_dto.rs
lib/controllers/: mod.rs  user_controller.rs
lib/domain/: mod.rs
lib/domain/entities/: user.rs
lib/domain/repositories/: user_repository.rs
lib/infrastructure/persistence/: user_service.rs
lib/interfaces/: mod.rs
public/: index.html
src/: bin.rs
