[package]
name = "shop"
version = "0.1.0"
edition = "2024"

[lib]
name = "shop_lib"
path = "lib/lib.rs"

[[bin]]
name = "shop_bin"
path = "src/bin.rs"

[dependencies]
axum = "0.8.1"
getset = "0.1.5"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "migrate", "runtime-tokio"] }
tokio = { version = "1.44.0", features = [ "rt-multi-thread" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
axum-controller = { git = "https://git.vlt81.de/vault81/axum-controller", branch = "add-nixpkg-and-hydra" }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
rust-embed = "8.6.0"
mime_guess = "2.0.5"
